--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1,6 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4caf9d44",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "<div style=\"\n",
+    "    background-color: #439cc8; \n",
+    "    color: white; \n",
+    "    font-size: 16px; \n",
+    "    font-style: italic; \n",
+    "    padding: 10px 15px; \n",
+    "    margin-bottom: 15px; \n",
+    "    border-radius: 8px;\">\n",
+    "    <h1>Nettoyage et analyse des données</h1>\n",
+    "    <p>\n",
+    "    - introduction\n",
+    "    - titres des sections\n",
+    "    - interprétation des visuels\n",
+    "    - justification des résultats\n",
+    "    - conclusion\n",
+    "    </p>\n",
+    "    <p>\n",
+    "    procédé de développement de l'outil<br>\n",
+    "    du nettoyage à la modélisation des données<br>\n",
+    "    en\n",
+    "    passant par l’analyse exploratoire\n",
+    "    </p>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "7cc6d794",
