ajout de la liste des attendus + intro

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,12 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4caf9d44",
+   "id": "92812978",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "<div style=\"\n",
     "    background-color: #439cc8; \n",
     "    color: white; \n",
@@ -23,13 +20,35 @@
     "    - interprétation des visuels\n",
     "    - justification des résultats\n",
     "    - conclusion\n",
+    "    - etc\n",
     "    </p>\n",
     "    <p>\n",
-    "    procédé de développement de l'outil<br>\n",
-    "    du nettoyage à la modélisation des données<br>\n",
-    "    en\n",
-    "    passant par l’analyse exploratoire\n",
+    "    contenant le procédé de développement de\n",
+    "    votre outil, du nettoyage à la modélisation des données, en\n",
+    "    passant par l’analyse exploratoire.</p>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91e74630",
+   "metadata": {},
+   "source": [
+    "<div style=\"\n",
+    "    background-color: #439cc8; \n",
+    "    color: white; \n",
+    "    font-size: 16px; \n",
+    "    font-style: italic; \n",
+    "    padding: 10px 15px; \n",
+    "    margin-bottom: 15px; \n",
+    "    border-radius: 8px;\">\n",
+    "    <h1>Intro</h1>\n",
+    "    <p>\n",
+    "    1) Télecharger les données :<br>\n",
+    "    https://drive.google.com/file/d/1itXdRo4WJuhqCjtVX4WGvT327WWp4LB7/view?usp=sharing\n",
     "    </p>\n",
+    "    <p>\n",
+    "    2) Enregistrer les données dans un dossier `raw_data` à la racine du projet</p>\n",
     "</div>"
    ]
   },
