mise en page du print de perceptron

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -42,7 +42,7 @@
     "    padding: 10px 15px; \n",
     "    margin-bottom: 15px; \n",
     "    border-radius: 8px;\">\n",
-    "    <h1>Intro</h1>\n",
+    "    <h1>Procédure d'import</h1>\n",
     "    <p>\n",
     "    1) Télecharger les données :<br>\n",
     "    https://drive.google.com/file/d/1itXdRo4WJuhqCjtVX4WGvT327WWp4LB7/view?usp=sharing\n",
